--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <h2>Login com Google</h2>
 
   <div id="g_id_onload"
-       data-client_id="134654099641-g8a4ns198ns3u8c11shlvidrq67gastu.apps.googleusercontent.com"
+       data-client_id="{SEU ID}"
        data-callback="handleCredentialResponse"
        data-auto_prompt="false">
   </div>
